--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,10 +15,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-charts": "^8.5.2",
     "@repo/ui": "workspace:*",
     "eztest": "workspace:*",
-    "highcharts": "^12.2.0",
-    "highcharts-react-official": "^3.2.1",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
