--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "ez-tmpl-next",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
+    "build": "panda codegen && turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "prepare": "panda codegen"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.54.0",
     "json-server": "1.0.0-beta.3",
     "prettier": "^3.5.3",
     "turbo": "^2.5.0",
