좌측 네비게이션 바 제거 및 안쓰는 요소 정리

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,8 +19,7 @@
     "eztest": "workspace:*",
     "next": "^15.2.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "reactflow": "^11.11.4"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.54.0",
